--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body{
     background-color: #444;
 }
 
-.carousel-selections button:focus{
+.carousel-selections button.active{
     background-color: #333;
 }
 
